--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,3 @@
-FROM reactnativecommunity/react-native-android
+FROM reactnativecommunity/react-native-android:latest
+
+RUN npm install -g expo-cli react-native-cli
